bad/int_negation_of_null.example_compiler_output
ERROR
[1mbad/int_negation_of_null.lat:3:2: [1;31merror: [0;1mcannot negate value of non-integer type `null`[m
	-null;
	[1;32m^[m
